objects/FinancialAccountPDAAudit__c.object
<CustomObject>
    <fields>
        <fullName>DC_AccountId__c</fullName>
        <description>`Account_Id` bigint from Table audit_accounts_pda</description>
        <inlineHelpText>`Account_Id` bigint from Table audit_accounts_pda</inlineHelpText>
        <label>DC_AccountId</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DC_ActionTaken__c</fullName>
        <description>SRC : Action_Taken,  table audit_accounts_pda</description>
        <inlineHelpText>SRC : Action_Taken,  table audit_accounts_pda</inlineHelpText>
        <label>DC_ActionTaken</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DC_AuditAccountPDAId__c</fullName>
        <description>Audit_Account_PDA_Id from audit_accounts_pda</description>
        <externalId>true</externalId>
        <inlineHelpText>Audit_Account_PDA_Id from audit_accounts_pda</inlineHelpText>
        <label>DC_AuditAccountPDAId</label>
        <precision>12</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DC_AuditCreateDate__c</fullName>
        <description>SRC:Audit_Create_Date, table - audit_accounts_pda</description>
        <label>DC_AuditCreateDate</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>DC_Comments__c</fullName>
        <description>SRC:Comments - table audit_accounts_pda</description>
        <label>DC_Comments</label>
        <length>3000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>DC_CreateDate__c</fullName>
        <description>SRC : Create_Date, table audit_accounts_pda</description>
        <inlineHelpText>SRC : Create_Date, table audit_accounts_pda</inlineHelpText>
        <label>DC_CreateDate</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>DC_CurrentAUM__c</fullName>
        <description>SRC : Current_AUM - table audit_accounts_pda</description>
        <inlineHelpText>SRC : Current_AUM - table audit_accounts_pda</inlineHelpText>
        <label>DC_CurrentAUM</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DC_DistributionRate__c</fullName>
        <description>SRC: Distribution_Rate, table audit_accounts_pda</description>
        <inlineHelpText>SRC: Distribution_Rate, table audit_accounts_pda</inlineHelpText>
        <label>DC_DistributionRate</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DC_EventType__c</fullName>
        <description>SRC :  Event_Type from table audit_accounts_pda</description>
        <label>DC_EventType</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DC_ModifiedBy__c</fullName>
        <description>SRC : Modified_By, table audit_accounts_pda</description>
        <label>DC_ModifiedBy</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DC_OldPDA__c</fullName>
        <description>Old_PDA from Table audir_accounts_pda</description>
        <inlineHelpText>Old_PDA</inlineHelpText>
        <label>DC_OldPDA</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DC_PDAResetDate__c</fullName>
        <description>SRC : PDA_Reset_Date - table audit_accounts_pda</description>
        <label>DC_PDAResetDate</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>DC_PDA__c</fullName>
        <description>`PDA` decimal(18,4) from Table audit_accounts_pda</description>
        <inlineHelpText>Current PDA</inlineHelpText>
        <label>DC_PDA</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DC_RequestedBy__c</fullName>
        <description>SRC  : Requested_By - Table audit_accounts_pda</description>
        <inlineHelpText>SRC  : Requested_By - Table audit_accounts_pda</inlineHelpText>
        <label>DC_RequestedBy</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DC_Version__c</fullName>
        <description>SRC:Version,table audit_accounts_pda</description>
        <label>DC_Version</label>
        <precision>16</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FinancialAccountPDAAuditHistory__c</fullName>
        <label>Financial Account</label>
        <referenceTo>FinancialAccount__c</referenceTo>
        <relationshipLabel>FinancialAccountPDAAudit</relationshipLabel>
        <relationshipName>FinancialAccountPDAAudit</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <description>Object to store the PDA History</description>
    <label>FinancialAccountPDAAudit</label>
    <nameField>
        <label>FinancialAccountPDAHistory Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>FinancialAccountPDAAudit</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>